@@ -1,11 +1,12 @@
+# http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-mysql
-version:      3.0002_1
+version:      3.0002_2
 version_from: lib/DBD/mysql.pm
 installdirs:  site
 requires:
-    DBI:                           1.08
     Data::Dumper:                  0
+    DBI:                           1.08
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.12
+generated_by: ExtUtils::MakeMaker version 6.17
